--- a/Assignment-1/style.css
+++ b/Assignment-1/style.css
@@ -1,61 +1,102 @@
- /* styles.css */
-* {
-    margin: 0;
+*{
     padding: 0;
-    box-sizing: border-box;
+    margin: 0;  
+    font-family: "Roboto", serif;
 }
-body {
-    font-family: Arial, sans-serif;
+.main_box{
+    background-image: url(photo.jpg);
+     height: 100vh;
+     background-size: cover;
 }
-.header {
-    background: #333;
+.btn_one{
     color: white;
-    padding: 15px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+    font-size: 30px;
+    font-weight: 700;
+    position: absolute;
+    left: 16px;
+    line-height: 65px;
 }
-.logo {
-    font-size: 24px;
-    font-weight: bold;
+.sidebar_menu{
+    position: fixed;
+    left: -350px;
+    height: 100vh;
+    width: 300px;
+    background-color: rgba(255, 255, 255, 0.1);
+    box-shadow: 0 0 8px rgba(255,  255,255, 0.6);
+    transition: 1s linear;
 }
-.social-links a {
+.sidebar_menu .logo{
+    position: absolute;
+    width: 100%;
+    line-height: 60px;
+    box-shadow: 0 0 4px rgba(255,  255,255, 0.6);
+}
+.sidebar_menu .logo a{
+position: absolute;
+left: 50px;
+font-size: 20px;
+font-weight: 400;
+color: white;
+text-decoration: none;
+}
+ .btn_two i{
+    position: absolute;
+    color: grey;
+    left: 275px;
+    top: 16px;
+    opacity: 0;
+    cursor: pointer;
+}
+.sidebar_menu .menu{
+    position: absolute;
+    width: 100%;
+    top: 50px;
+    
+}
+.sidebar_menu .menu li{
+    margin-top: 6px;
+    padding: 14px 20px;
+
+}
+.sidebar_menu .menu i,a{
     color: white;
-    margin-left: 10px;
+    padding-right: 8px;
     text-decoration: none;
+    font-size: 20px;
 }
-.navbar {
-    background: #555;
-    padding: 10px;
-    text-align: center;
-}
-.navbar a {
+.sidebar_menu   .social_media{
     color: white;
-    margin: 10px;
-    text-decoration: none;
-    font-size: 18px;
+    opacity: 0.5;
+    position: absolute;
+    right: 25%;
+    bottom: 80px;
 }
-.container {
-    display: flex;
+#check{
+    display: none;
 }
-.sidebar {
-    width: 20%;
-    background: #f4f4f4;
-    padding: 20px;
+.sidebar_menu   .social_media i{
+    padding: 4px;
 }
-.main-content {
-    width: 80%;
-    padding: 20px;
+.sidebar_menu .menu li:hover{
+    box-shadow: 0 0 8px rgba(255,  255,255, 0.6);
 }
-.box {
-    background: #ddd;
-    padding: 20px;
-    margin-bottom: 10px;
+.sidebar_menu .btn_two:hover{
+    font-size: 40px;
 }
-.footer {
-    background: #333;
-    color: white;
-    text-align: center;
-    padding: 10px;
-    margin-top: 20px;
+.sidebar_menu .btn_two:hover{
+    font-size: 20px;
+    transition: 1s linear;
+}
+.sidebar_menu   .social_media i:hover{
+ opacity: 1;
+ transform: scale(1.1);
+}
+#check:checked ~ .sidebar_menu{
+    left: 0;
+}
+#check:checked ~  .btn_one i{
+    opacity: 0;
+}
+#check:checked ~ .sidebar_menu .btn_two i{
+opacity: 1;
 }
